// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation component renders correctly for admin user 1`] = `
<DocumentFragment>
  <header
    class="header fixed-mobile-header"
  >
    <div
      class="header-info"
    >
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="text-center d-none d-md-block col-md-4"
          >
            <i
              class="fa fa-rocket"
            />
            <span>
              Fast & Free Shipping
            </span>
          </div>
          <div
            class="text-center d-none d-md-block col-md-4"
          >
            <i
              class="fa fa-credit-card"
            />
            <span>
              Flexible Payment Options
            </span>
          </div>
          <div
            class="text-center d-none d-md-block col-md-4"
          >
            <i
              class="fa fa-phone"
            />
            <span>
              24/7 Customer Support
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="align-items-center top-header row"
      >
        <div
          class="pr-0 col-12 order-1 col-sm-12 order-sm-1 col-md-3 order-md-1 col-lg-3 order-lg-1"
        >
          <div
            class="brand"
          >
            <a
              href="/"
            >
              <h1
                class="logo"
              >
                <img
                  alt="favicon"
                  class="rmit-logo"
                  src="/images/rmit-store-logo.png"
                />
                 
              </h1>
            </a>
          </div>
        </div>
        <div
          class="pt-2 pt-lg-0 col-12 order-4 col-sm-12 order-sm-4 col-md-12 order-md-4 col-lg-5 order-lg-2"
        >
          Autosuggest Component
        </div>
        <div
          class="desktop-hidden col-12 order-2 col-sm-12 order-sm-2 col-md-4 order-md-1 col-lg-5 order-lg-3"
        >
          <div
            class="header-links"
          >
            Button ComponentButton Component
          </div>
        </div>
        <div
          class="col-12 order-2 col-sm-12 order-sm-2 col-md-9 order-md-1 col-lg-4 order-lg-3"
        >
          <nav
            class="mt-1 mt-md-0 navbar navbar-expand-md navbar-light bg-light"
          >
            Button Component
            <ul
              class="navbar-nav"
            >
              <li
                class="nav-item"
              >
                <a
                  class="nav-link"
                  href="/shop"
                >
                  Shop
                </a>
              </li>
              <li
                class="dropdown nav-item"
              >
                <a
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="nav-link"
                  href="#"
                >
                  Welcome
                  <span
                    class="fa fa-chevron-down dropdown-caret"
                  />
                </a>
                <div
                  aria-hidden="true"
                  class="dropdown-menu dropdown-menu-right"
                  role="menu"
                  tabindex="-1"
                >
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Dashboard
                  </button>
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Sign Out
                  </button>
                </div>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="hidden-mini-cart"
    >
      <div
        class="mini-cart"
      >
        Cart Component
      </div>
      <div
        class="drawer-backdrop"
      />
    </div>
    <div
      aria-hidden="true"
      class="hidden-mini-menu"
    >
      <div
        class="mini-menu"
      >
        <div
          class="navigation-menu"
        >
          <div
            class="menu-header"
          />
          <div
            class="menu-body"
          >
            <div
              class="container"
            >
              <h3
                class="menu-title text-uppercase"
              >
                Shop By Category
              </h3>
              <nav
                role="navigation"
              >
                <ul
                  class="menu-list"
                />
              </nav>
            </div>
          </div>
        </div>
      </div>
      <div
        class="drawer-backdrop"
      />
    </div>
  </header>
</DocumentFragment>
`;

exports[`Navigation component renders correctly for authenticated user 1`] = `
<DocumentFragment>
  <header
    class="header fixed-mobile-header"
  >
    <div
      class="header-info"
    >
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="text-center d-none d-md-block col-md-4"
          >
            <i
              class="fa fa-rocket"
            />
            <span>
              Fast & Free Shipping
            </span>
          </div>
          <div
            class="text-center d-none d-md-block col-md-4"
          >
            <i
              class="fa fa-credit-card"
            />
            <span>
              Flexible Payment Options
            </span>
          </div>
          <div
            class="text-center d-none d-md-block col-md-4"
          >
            <i
              class="fa fa-phone"
            />
            <span>
              24/7 Customer Support
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="align-items-center top-header row"
      >
        <div
          class="pr-0 col-12 order-1 col-sm-12 order-sm-1 col-md-3 order-md-1 col-lg-3 order-lg-1"
        >
          <div
            class="brand"
          >
            <a
              href="/"
            >
              <h1
                class="logo"
              >
                <img
                  alt="favicon"
                  class="rmit-logo"
                  src="/images/rmit-store-logo.png"
                />
                 
              </h1>
            </a>
          </div>
        </div>
        <div
          class="pt-2 pt-lg-0 col-12 order-4 col-sm-12 order-sm-4 col-md-12 order-md-4 col-lg-5 order-lg-2"
        >
          Autosuggest Component
        </div>
        <div
          class="desktop-hidden col-12 order-2 col-sm-12 order-sm-2 col-md-4 order-md-1 col-lg-5 order-lg-3"
        >
          <div
            class="header-links"
          >
            Button ComponentButton Component
          </div>
        </div>
        <div
          class="col-12 order-2 col-sm-12 order-sm-2 col-md-9 order-md-1 col-lg-4 order-lg-3"
        >
          <nav
            class="mt-1 mt-md-0 navbar navbar-expand-md navbar-light bg-light"
          >
            Button Component
            <ul
              class="navbar-nav"
            >
              <li
                class="nav-item"
              >
                <a
                  class="nav-link"
                  href="/shop"
                >
                  Shop
                </a>
              </li>
              <li
                class="dropdown nav-item"
              >
                <a
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="nav-link"
                  href="#"
                >
                  Welcome
                  <span
                    class="fa fa-chevron-down dropdown-caret"
                  />
                </a>
                <div
                  aria-hidden="true"
                  class="dropdown-menu dropdown-menu-right"
                  role="menu"
                  tabindex="-1"
                >
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Dashboard
                  </button>
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Sign Out
                  </button>
                </div>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="hidden-mini-cart"
    >
      <div
        class="mini-cart"
      >
        Cart Component
      </div>
      <div
        class="drawer-backdrop"
      />
    </div>
    <div
      aria-hidden="true"
      class="hidden-mini-menu"
    >
      <div
        class="mini-menu"
      >
        <div
          class="navigation-menu"
        >
          <div
            class="menu-header"
          />
          <div
            class="menu-body"
          >
            <div
              class="container"
            >
              <h3
                class="menu-title text-uppercase"
              >
                Shop By Category
              </h3>
              <nav
                role="navigation"
              >
                <ul
                  class="menu-list"
                />
              </nav>
            </div>
          </div>
        </div>
      </div>
      <div
        class="drawer-backdrop"
      />
    </div>
  </header>
</DocumentFragment>
`;

exports[`Navigation component renders correctly for unauthenticated user 1`] = `
<DocumentFragment>
  <header
    class="header fixed-mobile-header"
  >
    <div
      class="header-info"
    >
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="text-center d-none d-md-block col-md-4"
          >
            <i
              class="fa fa-rocket"
            />
            <span>
              Fast & Free Shipping
            </span>
          </div>
          <div
            class="text-center d-none d-md-block col-md-4"
          >
            <i
              class="fa fa-credit-card"
            />
            <span>
              Flexible Payment Options
            </span>
          </div>
          <div
            class="text-center d-none d-md-block col-md-4"
          >
            <i
              class="fa fa-phone"
            />
            <span>
              24/7 Customer Support
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="align-items-center top-header row"
      >
        <div
          class="pr-0 col-12 order-1 col-sm-12 order-sm-1 col-md-3 order-md-1 col-lg-3 order-lg-1"
        >
          <div
            class="brand"
          >
            <a
              href="/"
            >
              <h1
                class="logo"
              >
                <img
                  alt="favicon"
                  class="rmit-logo"
                  src="/images/rmit-store-logo.png"
                />
                 
              </h1>
            </a>
          </div>
        </div>
        <div
          class="pt-2 pt-lg-0 col-12 order-4 col-sm-12 order-sm-4 col-md-12 order-md-4 col-lg-5 order-lg-2"
        >
          Autosuggest Component
        </div>
        <div
          class="desktop-hidden col-12 order-2 col-sm-12 order-sm-2 col-md-4 order-md-1 col-lg-5 order-lg-3"
        >
          <div
            class="header-links"
          >
            Button ComponentButton Component
          </div>
        </div>
        <div
          class="col-12 order-2 col-sm-12 order-sm-2 col-md-9 order-md-1 col-lg-4 order-lg-3"
        >
          <nav
            class="mt-1 mt-md-0 navbar navbar-expand-md navbar-light bg-light"
          >
            Button Component
            <ul
              class="navbar-nav"
            >
              <li
                class="nav-item"
              >
                <a
                  class="nav-link"
                  href="/shop"
                >
                  Shop
                </a>
              </li>
              <li
                class="dropdown nav-item"
              >
                <a
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="nav-link"
                  href="#"
                >
                  Welcome!
                  <span
                    class="fa fa-chevron-down dropdown-caret"
                  />
                </a>
                <div
                  aria-hidden="true"
                  class="dropdown-menu dropdown-menu-right"
                  role="menu"
                  tabindex="-1"
                >
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Login
                  </button>
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Sign Up
                  </button>
                </div>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="hidden-mini-cart"
    >
      <div
        class="mini-cart"
      >
        Cart Component
      </div>
      <div
        class="drawer-backdrop"
      />
    </div>
    <div
      aria-hidden="true"
      class="hidden-mini-menu"
    >
      <div
        class="mini-menu"
      >
        <div
          class="navigation-menu"
        >
          <div
            class="menu-header"
          />
          <div
            class="menu-body"
          >
            <div
              class="container"
            >
              <h3
                class="menu-title text-uppercase"
              >
                Shop By Category
              </h3>
              <nav
                role="navigation"
              >
                <ul
                  class="menu-list"
                />
              </nav>
            </div>
          </div>
        </div>
      </div>
      <div
        class="drawer-backdrop"
      />
    </div>
  </header>
</DocumentFragment>
`;

exports[`Navigation component renders with open menu 1`] = `
<DocumentFragment>
  <header
    class="header fixed-mobile-header"
  >
    <div
      class="header-info"
    >
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="text-center d-none d-md-block col-md-4"
          >
            <i
              class="fa fa-rocket"
            />
            <span>
              Fast & Free Shipping
            </span>
          </div>
          <div
            class="text-center d-none d-md-block col-md-4"
          >
            <i
              class="fa fa-credit-card"
            />
            <span>
              Flexible Payment Options
            </span>
          </div>
          <div
            class="text-center d-none d-md-block col-md-4"
          >
            <i
              class="fa fa-phone"
            />
            <span>
              24/7 Customer Support
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="align-items-center top-header row"
      >
        <div
          class="pr-0 col-12 order-1 col-sm-12 order-sm-1 col-md-3 order-md-1 col-lg-3 order-lg-1"
        >
          <div
            class="brand"
          >
            <a
              href="/"
            >
              <h1
                class="logo"
              >
                <img
                  alt="favicon"
                  class="rmit-logo"
                  src="/images/rmit-store-logo.png"
                />
                 
              </h1>
            </a>
          </div>
        </div>
        <div
          class="pt-2 pt-lg-0 col-12 order-4 col-sm-12 order-sm-4 col-md-12 order-md-4 col-lg-5 order-lg-2"
        >
          Autosuggest Component
        </div>
        <div
          class="desktop-hidden col-12 order-2 col-sm-12 order-sm-2 col-md-4 order-md-1 col-lg-5 order-lg-3"
        >
          <div
            class="header-links"
          >
            Button ComponentButton Component
          </div>
        </div>
        <div
          class="col-12 order-2 col-sm-12 order-sm-2 col-md-9 order-md-1 col-lg-4 order-lg-3"
        >
          <nav
            class="mt-1 mt-md-0 navbar navbar-expand-md navbar-light bg-light"
          >
            Button Component
            <ul
              class="navbar-nav"
            >
              <li
                class="nav-item"
              >
                <a
                  class="nav-link"
                  href="/shop"
                >
                  Shop
                </a>
              </li>
              <li
                class="dropdown nav-item"
              >
                <a
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="nav-link"
                  href="#"
                >
                  Welcome!
                  <span
                    class="fa fa-chevron-down dropdown-caret"
                  />
                </a>
                <div
                  aria-hidden="true"
                  class="dropdown-menu dropdown-menu-right"
                  role="menu"
                  tabindex="-1"
                >
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Login
                  </button>
                  <button
                    class="dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    Sign Up
                  </button>
                </div>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="hidden-mini-cart"
    >
      <div
        class="mini-cart"
      >
        Cart Component
      </div>
      <div
        class="drawer-backdrop"
      />
    </div>
    <div
      aria-hidden="false"
      class="mini-menu-open"
    >
      <div
        class="mini-menu"
      >
        <div
          class="navigation-menu"
        >
          <div
            class="menu-header"
          >
            Button Component
          </div>
          <div
            class="menu-body"
          >
            <div
              class="container"
            >
              <h3
                class="menu-title text-uppercase"
              >
                Shop By Category
              </h3>
              <nav
                role="navigation"
              >
                <ul
                  class="menu-list"
                />
              </nav>
            </div>
          </div>
        </div>
      </div>
      <div
        class="drawer-backdrop dark-overflow"
      />
    </div>
  </header>
</DocumentFragment>
`;
